foolish/foolish-core/src/snapshots/foolish_core__approval_tests__concatenation_with_single_element.snap
---
source: foolish-core/src/lib.rs
expression: output
---
INPUT: {a = {x=1}; b = {y=2}; c = a b;}
[0] PARSED:
Brane [EMBRYONIC]
  a = 
  Brane [EMBRYONIC]
    x = 
    Int(1) [INDEPENDENT]
  b = 
  Brane [EMBRYONIC]
    y = 
    Int(2) [INDEPENDENT]
  c = 
  Concatenation(elements=2) [EMBRYONIC]
    Search(pattern='^a$', dir=BACKWARD, FREE) [EMBRYONIC]
    Search(pattern='^b$', dir=BACKWARD, FREE) [EMBRYONIC]
RESULT:
Brane [CONSTANT]
  a = 
  Brane [CONSTANT]
    x = 
    Int(1) [INDEPENDENT]
  b = 
  Brane [CONSTANT]
    y = 
    Int(2) [INDEPENDENT]
  c = 
  Brane [CONSTANT]
    x = 
    Int(1) [INDEPENDENT]
    y = 
    Int(2) [INDEPENDENT]
