foolish/foolish-core/src/snapshots/foolish_core__approval_tests__concatenation_with_unresolved_search.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 JiyIHoqmeWZcDKY4ByOf4eik66C/KxT5CZGFkmwTLMEEnwpDhh/NUbHkTS3xjGbwu5rGcQnAkF9Xo8nNQP/fAg==
INPUT: {a = {x=ref}; b = {y=2}; c = a b;}
[0] PARSED:
Brane [EMBRYONIC]
  a = 
  Brane [EMBRYONIC]
    x = 
    Search(pattern='^ref$', dir=BACKWARD, FREE) [EMBRYONIC]
  b = 
  Brane [EMBRYONIC]
    y = 
    Int(2) [INDEPENDENT]
  c = 
  Concatenation(elements=2) [EMBRYONIC]
    Search(pattern='^a$', dir=BACKWARD, FREE) [EMBRYONIC]
    Search(pattern='^b$', dir=BACKWARD, FREE) [EMBRYONIC]
RESULT:
Brane [WOCONSTANIC]
  a = 
  Brane [WOCONSTANIC]
    x = 
    Search(pattern='^ref$', dir=BACKWARD, FREE) [ECONSTANIC]
  b = 
  Brane [CONSTANT]
    y = 
    Int(2) [INDEPENDENT]
  c = 
  Brane [CONSTANT]
    y = 
    Int(2) [INDEPENDENT]
