foolish/foolish-core/src/snapshots/foolish_core__approval_tests__constanticRendering.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 IqEgQiRB4G/qSOiXcWLqwNylynTyuxZW5zXqsPDaungmaPr5887WC/2i+fSA8X72mRY71uJ25LSWpNqvUjt4DA==
INPUT: {
[0] PARSED:
Brane [EMBRYONIC]
  x = 
  Search(pattern='^nonˍexistent$', dir=BACKWARD, FREE) [EMBRYONIC]
RESULT:
Brane [WOCONSTANIC]
  x = 
  Search(pattern='^nonˍexistent$', dir=BACKWARD, FREE) [ECONSTANIC]
