foolish/foolish-core/src/snapshots/foolish_core__approval_tests__cross_scope_reference_chain.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 t/tZUByV019wrXjq8+Cad2HTnESO27g7fnn5uBKtCUNr5Er+EpT2YDyduo2fmag0mxkTeuBx+kXBEXCTFAglCQ==
INPUT: {a = 1; b = {c = a + 1; d = c + 1};}
[0] PARSED:
Brane [EMBRYONIC]
  a = 
  Int(1) [INDEPENDENT]
  b = 
  Brane [EMBRYONIC]
    c = 
    Operator(+) [EMBRYONIC]
      Search(pattern='^a$', dir=BACKWARD, FREE) [EMBRYONIC]
      Int(1) [INDEPENDENT]
    d = 
    Operator(+) [EMBRYONIC]
      Search(pattern='^c$', dir=BACKWARD, FREE) [EMBRYONIC]
      Int(1) [INDEPENDENT]
RESULT:
Brane [WOCONSTANIC]
  a = 
  Int(1) [INDEPENDENT]
  b = 
  Brane [WOCONSTANIC]
    c = 
    Int(2) [CONSTANT]
    d = 
    Operator(+) [WOCONSTANIC]
      Search(pattern='^c$', dir=BACKWARD, FREE) [WOCONSTANIC]
        Operator(+) [WOCONSTANIC]
          Search(pattern='^a$', dir=BACKWARD, FREE) [CONSTANT]
          Int(1) [INDEPENDENT]
      Int(1) [INDEPENDENT]
