foolish/foolish-core/src/snapshots/foolish_core__approval_tests__deeplyNestedBranesIsApproved.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 62LpgOvXcJG205bkf+654GQrEytdAZVsuezl1pvVmdbPYtTy/K+yLP2im15sjg2I8zvZMmI5CvOWtXCEloaLAg==
INPUT: {
[0] PARSED:
Brane [EMBRYONIC]
  Brane [EMBRYONIC]
    Brane [EMBRYONIC]
      Int(1) [INDEPENDENT]
    Int(2) [INDEPENDENT]
  Int(3) [INDEPENDENT]
RESULT:
Brane [CONSTANT]
  Brane [CONSTANT]
    Brane [CONSTANT]
      Int(1) [INDEPENDENT]
    Int(2) [INDEPENDENT]
  Int(3) [INDEPENDENT]
