foolish/foolish-core/src/snapshots/foolish_core__approval_tests__division_by_zero_in_nested_brane.snap
---
source: foolish-core/src/lib.rs
expression: output
---
INPUT: {outer = {inner = {a = 5 / 0; b = 10 / 2};};}
[0] PARSED:
Brane [EMBRYONIC]
  outer = 
  Brane [EMBRYONIC]
    inner = 
    Brane [EMBRYONIC]
      a = 
      Operator(/) [EMBRYONIC]
        Int(5) [INDEPENDENT]
        Int(0) [INDEPENDENT]
      b = 
      Operator(/) [EMBRYONIC]
        Int(10) [INDEPENDENT]
        Int(2) [INDEPENDENT]
RESULT:
Brane [NK]
  outer = 
  Brane [NK]
    inner = 
    Brane [NK]
      a = 
      ??? (division by zero) [NK]
      b = 
      Int(5) [CONSTANT]
