foolish/foolish-core/src/snapshots/foolish_core__approval_tests__division_exact_and_remainder.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 QoXOWKbLNbdPsfQfB6vSDQe2PFKQSHixoBbS3Rj51eTkybmfKRc7uY6MZqEgroEZ5RK+36J0u4D06K1cBkLhCg==
INPUT: {a = 10 / 3; b = 9 / 3;}
[0] PARSED:
Brane [EMBRYONIC]
  a = 
  Operator(/) [EMBRYONIC]
    Int(10) [INDEPENDENT]
    Int(3) [INDEPENDENT]
  b = 
  Operator(/) [EMBRYONIC]
    Int(9) [INDEPENDENT]
    Int(3) [INDEPENDENT]
RESULT:
Brane [CONSTANT]
  a = 
  Int(3) [CONSTANT]
  b = 
  Int(3) [CONSTANT]
