foolish/foolish-core/src/snapshots/foolish_core__approval_tests__emptyBraneIsApproved.snap
---
source: foolish-core/src/lib.rs
expression: output
---
INPUT: {}
[0] PARSED:
Brane [EMBRYONIC]
RESULT:
Brane [CONSTANT]
